--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
+        <button id="btn">New excuse here</button>
+        <h2 id="excuse">My dog ate my homework</h2>
       </p>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
